# 3DWork

./: .gitignore  COMPETITORS_ANALYSIS.md  Cargo.toml  DESKTOP_TODO.md  ROADMAP_SAAS.md  WASM_CONVERSION_PLAN.md  cleanup_snap_mounts.sh
.claude/: settings.local.json
crates/gui/: Cargo.toml
crates/gui/src/: command.rs  export.rs  extrude.rs  fixtures.rs  harness.rs  helpers.rs  i18n.rs  lib.rs  main.rs  validation.rs
crates/gui/src/app/: keyboard.rs  menus.rs  mod.rs  styles.rs
crates/gui/src/sketch/: constraints.rs  fillet.rs  geometry.rs  mod.rs  offset.rs  operations.rs  pattern.rs  trim.rs  validation.rs
crates/gui/src/state/: chamfer3d.rs  chat.rs  fillet3d.rs  mod.rs  operation_dialog.rs  selection.rs  settings.rs  sketch.rs
crates/gui/src/state/scene/: body_ops.rs  display.rs  feature_ops.rs  history.rs  mod.rs  persistence.rs  sketch_ops.rs  transform_ops.rs
crates/gui/src/ui/: chamfer3d_panel.rs  chat_panel.rs  fillet3d_panel.rs  mod.rs  operation_dialog.rs  parameters.rs  properties.rs  scene_tree.rs  sketch_toolbar.rs  status_bar.rs  toolbar.rs
crates/gui/src/viewport/: camera.rs  context_menu.rs  edge.rs  gizmo.rs  gl_renderer.rs  mesh.rs  mod.rs  overlays.rs  picking.rs  renderer.rs  sketch_interact.rs  sketch_utils.rs
crates/gui/tests/: integration_build.rs  integration_commands.rs  integration_harness.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/ai/: mod.rs
crates/server/src/routes/: mod.rs
crates/server/src/storage/: mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  parameters.rs
crates/vcad-wasm/: Cargo.toml
crates/vcad-wasm/src/: lib.rs
docs/: OPERATIONS.md  PROJECT_STRUCTURE.md  README.md  USER_GUIDE.md  json-scene-format.md
wasm-demo/: Cargo.toml  README.md  Trunk.toml  index.html
wasm-demo/src/: main.rs
wasm_vCAD/: .gitignore  ARCHITECTURE.md  ARCHITECTURE_IMPROVEMENT_PLAN.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  REFACTORING_LOG.md  TESTING_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
wasm_vCAD/.claude/: claude.md
wasm_vCAD/crates/vcad-engine/: Cargo.toml
wasm_vCAD/crates/vcad-engine/src/: boolean.rs  export.rs  extrude.rs  fillet.rs  lib.rs  primitives.rs  sketch_operations.rs  sketch_wasm.rs  truck_primitives.rs
wasm_vCAD/crates/vcad-engine/src/sketch/: constraints.rs  fillet.rs  geometry.rs  mod.rs  offset.rs  pattern.rs  trim.rs  types.rs  validation.rs
wasm_vCAD/scenes/: cube_test.json  my_scene.json  scene.json
wasm_vCAD/src/: App.tsx  index.css
wasm_vCAD/src/hooks/: index.ts  useDisposable.ts  useFeatureEdit.ts  useSceneGraph.ts  useSketchEditor.ts  useSketchExtrude.ts  useSketchSave.ts
wasm_vCAD/src/stores/: booleanStore.ts  edgeSelectionStore.ts  faceSelectionStore.ts  notificationStore.ts  sceneStore.ts  settingsStore.ts  sketchStore.ts  sketchUIStore.ts  viewportContextMenuStore.ts
wasm_vCAD/src/test/: setup.ts
wasm_vCAD/src/types/: mesh.ts  scene.ts
wasm_vCAD/src/utils/: debugOverlay.ts  extrudeMesh.ts  faceUtils.ts  fileOperations.ts  geometryCache.ts  manifoldCSG.ts  mathUtils.ts  sceneSerializer.ts  splineInterpolation.ts
wasm_vCAD/src/wasm/: engine.ts  normalizers.ts
wasm_vCAD/tests/: check_errors.py
wasm_vCAD/tests/selenium/: README.md  arc-multiple.test.ts  arc-visual-check.test.ts  basic.test.ts  context-menu.test.ts  debug.test.ts  draw-arc.test.ts  draw-polyline.test.ts  draw-spline.test.ts  extrude.test.ts  face_selection.test.ts  face_selection_simple.test.ts  polyline-right-click.test.ts  repeated-trim.test.ts  select-polyline.test.ts  select-spline.test.ts  spline-right-click.test.ts  (+5 more)
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.css  App.tsx  index.css
(+93 files in other folders)
