[package]
name = "wasm-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.31"
serde = { version = "1", features = ["derive"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

# Separate workspace to avoid conflicts with main project
[workspace]

[profile.release]
opt-level = 2
